# 15_swot

./: README.md  app.py  pyproject.toml  requirements.txt
src/swot/: crew.py  main.py
src/swot/config/: agents.yaml  tasks.yaml
tests/: requi.txt  task_original.txt
