[project]
name = "swot"
version = "0.1.0"
description = "swot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai-tools>=0.14.0",
    "crewai[tools]>=0.76.9,<1.0.0",
    "langchain-openai>=0.2.8",
    "python-docx>=1.1.2",
    "streamlit>=1.40.2",
]

[project.scripts]
swot = "swot.main:run"
run_crew = "swot.main:run"
train = "swot.main:train"
replay = "swot.main:replay"
test = "swot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

